fix: explicitly set color property on buttons to fix default color on mobile browsers showing as blue.

--- a/lucuberate-client/src/assets/App.css
+++ b/lucuberate-client/src/assets/App.css
@@ -251,6 +251,7 @@ button:not(:disabled) {
 .btn {
   border-radius: 5px;
   font-weight: bold;
+  color: var(--text-color-dark)
 }
 
 .btn:active {
